# rust-riemann_client

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  proto.sh
examples/: client.rs  event.rs  event_tls.rs  query.rs  server.rs
src/: error.rs  lib.rs  main.rs  utils.rs
src/client/: hostname.rs  mod.rs
src/proto/: mod.proto  mod.rs  mod_pb.rs
src/transport/: mod.rs
test_certs/: invalid_cert.pem  invalid_client_key  valid_client_cert.pem  valid_client_key
tests/: from.rs
