[package]
authors = ["Sam Clements <sam@borntyping.co.uk>"]
description = "A Riemann client library"
edition = "2018"
license = "MIT"
name = "riemann_client"
repository = "https://github.com/borntyping/rust-riemann_client"
version = "0.9.0"

[[bin]]
name = "riemann-cli"
path = "src/main.rs"
test = false

[dependencies]
libc = "0.2.84"
protobuf = "2.20.0"
rustls = "0.19.0"
rustls-pemfile = "0.2.0"
webpki = "0.21.4"
webpki-roots = "0.21.0"

[dependencies.docopt]
optional = true
version = "1.1.0"

[dependencies.serde]
optional = true
version = "1.0.123"

[features]
default = ["docopt", "serde"]

[lib]
doctest = false
name = "riemann_client"
